package com.lafis.GeometricEfficiencyTool.domain.source;

import com.lafis.GeometricEfficiencyTool.domain.Coordinate;

public class CylindricalSource implements Source{

    public Coordinate randomizeEmitionPoint() {
        return null;
    }
}
