package com.lafis.GeometricEfficiencyTool.domain.source;

import com.lafis.GeometricEfficiencyTool.domain.Coordinate;

public class RectangularSource implements Source {
    private double height;
    private double width;

    @Override
    public Coordinate randomizeEmitionPoint() {
        return null;
    }
}
