package com.lafis.GeometricEfficiencyTool.entity.source;

import com.lafis.GeometricEfficiencyTool.entity.Coordinate;
import com.lafis.GeometricEfficiencyTool.entity.Direction;

public interface Source {

    Coordinate randomizeEmitionPoint();
}
